# cargo-fixture

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: CI.yaml
cargo-fixture-macros/: Cargo.toml
cargo-fixture-macros/src/: lib.rs
crates/lib/: Cargo.toml  README.md
crates/lib/src/: client_fixture.rs  client_test.rs  data.rs  error.rs  lib.rs  rpc.rs  rpc_socket.rs  socket.rs  utils.rs
crates/lib/src/rpc_socket/: platform.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs  types.rs
example/: Cargo.toml
example/tests/: fixture.rs  test.rs
examples/docker/: Cargo.toml  README.md
examples/docker/src/: lib.rs
examples/docker/tests/: fixture.rs  test.rs
examples/http/: Cargo.toml  README.md
examples/http/src/: lib.rs
examples/http/tests/: fixture.rs  test.rs
scratch/pk/: Cargo.toml
scratch/pk/src/: lib.rs
scratch/pk/tests/: fixture.rs  test.rs
scratch/pk/tests/shared/: mod.rs
src/: cli.rs  cli_.rs  cli__.rs  cli_nom.rs  cli_roll.rs  config.rs  data.rs  fixture.rs  fixture_process.rs  fixture_program.rs  lib.rs  logger.rs  main.rs  rpc.rs  server.rs  socket.rs  tests_runner.rs  utils.rs
src/cli/: flags.rs  parser.rs
src/cli_roll/: flags.rs  parser.rs
src/config/: cargo_meta.rs
src/exe/: config.rs  fixture.rs  main.rs  utils.rs
src/exe/fixture/: socket.rs
src/fixture/: socket.rs
src/fixture_program/: cargo_message.rs
src/lib/: lib.rs  socket.rs  utils.rs
src/server/: server_socket.rs  socket.rs  unix_sync.rs
tests/: args.rs  basic.rs  basics.rs  fixture_args.rs  fixture_env_var.rs  fixture_hang_cleanup.rs  fixture_kv.rs  fixture_panic1.rs  fixture_panic2.rs  fixture_panic_cleanup.rs  fixture_panic_connected.rs  fixture_serial.rs  hang.rs  kv.rs  panic.rs  print_args.rs  serial.rs
tests/common/: mod.rs
