[package]
name = "cargo-fixture"
version = "0.9.0"
authors = ["Vojtech Kral"]
description = "FIXME: descr"
license = "Apache-2.0"
keywords = ["rust", "cargo", "testing"] # TODO: more?
edition = "2021"

[[bin]]
name = "cargo-fixture"

# TODO: workspace deps?

[dependencies]
anyhow = "1"
async-ctrlc = "1.2.0"
futures-util = "0.3.29"
log = "0.4"
os_str_bytes = { version = "6.6", features = ["conversions"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
smol = "1.3.0"
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.51"
tabular = "0.2.0"

cargo-fixture-lib = { path = "crates/lib", features = ["smol"] }
pin-project-lite = "0.2.13" # FIXME: needed?

[workspace]
members = [
    "crates/lib",
    "crates/macros",
]
# TODO: can't have both smol- and tokio-enabled lib in the same ws
exclude = [
    "example",
    "scratch/pk",
]
