[package]
name = "cargo-fixture"
version = "0.9.0"
authors = ["Vojtech Kral"]
description = "FIXME: descr"
license = "Apache-2.0"
keywords = ["rust", "cargo", "testing"]
edition = "2021"

[[bin]]
name = "cargo-fixture"

[workspace]
members = [
    "crates/lib",
    "crates/macros",
]
exclude = [
    "example",
    "scratch/pk", # TODO: tmp
]

[workspace.dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
smol = "1.3.0"
thiserror = "1"

[dependencies]
anyhow = "1"
async-ctrlc = "1.2.0"
futures-util = "0.3.29"
log.workspace = true
os_str_bytes = { version = "6.6", features = ["conversions"] }
pin-project-lite = "0.2.13"
serde_json.workspace = true
serde.workspace = true
smol.workspace = true
strum = { version = "0.25.0", features = ["derive"] }
tabular = "0.2.0"
thiserror.workspace = true

cargo-fixture-lib = { path = "crates/lib", features = ["smol"] }
