[package]
name = "cargo_fixture_macros"
version = "0.0.0"
authors = ["Vojtech Kral <vojtech@kral.pm>"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1"
syn = "2"
