[package]
name = "cargo-fixture-lib"
version = "0.9.0" # TODO: ensure same version with binary
authors = ["Vojtech Kral"]
description = "FIXME: descr"
license = "Apache-2.0"
keywords = ["rust", "cargo", "testing"] # TODO: more?
edition = "2021"

# TODO: workspace deps

[lib]
name = "cargo_fixture"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
smol = { version = "1", optional = true }
thiserror = "1"
tokio = { version = "1", features = ["net", "io-util"], optional = true}

cargo-fixture-macros = { path = "../macros" }  # FIXME: from crates

[features]
default = ["smol"]
smol = ["dep:smol"]
tokio = ["dep:tokio"]
