[package]
name = "cargo-fixture-lib"
version = "0.9.0" # TODO: ensure same version with binary
authors = ["Vojtech Kral"]
description = "FIXME: descr"
license = "Apache-2.0"
keywords = ["rust", "cargo", "testing"]
edition = "2021"

[lib]
name = "cargo_fixture"
path = "src/lib.rs"

[dependencies]
log.workspace = true
serde.workspace = true
serde_json.workspace = true
smol = { workspace = true, optional = true }
strum.workspace = true
thiserror.workspace = true
tokio = { version = "1", features = ["net", "io-util"], optional = true}

cargo-fixture-macros = { path = "../macros" }  # TODO: from crates?

[features]
smol = ["dep:smol"]
tokio = ["dep:tokio"]
