[package]
name = "cargo-fixture-lib"
description = "Support library for the cargo-fixture cargo extension"
version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true

edition = "2021"
rust-version = "1.65"

[lib]
name = "cargo_fixture"
path = "src/lib.rs"

[dependencies]
log.workspace = true
serde.workspace = true
serde_json.workspace = true
smol = { workspace = true, optional = true }
strum.workspace = true
thiserror.workspace = true
tokio = { version = "1", features = ["net", "io-util"], optional = true }

cargo-fixture-macros = "=1.1.0"

[target.'cfg(windows)'.dependencies]
uds_windows = "1.1"

[features]
smol = ["dep:smol"]
tokio = ["dep:tokio"]

[package.metadata.docs.rs]
features = ["tokio"]
