[package]
name = "cargo-fixture-macros"
version = "0.9.0" # TODO: ensure same version with binary
authors = ["Vojtech Kral <vojtech@kral.pm>"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1"
syn = { version = "2", features = ["full"] }
