[package]
name = "cargo-fixture-macros"
description = "Macros for the cargo-fixture cargo extension"
version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true

edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1"
syn = { version = "2", features = ["full"] }
