[package]
name = "cargo-fixture-example-docker"
version = "0.9.0"
authors = ["Vojtech Kral"]
description = "docker example for cargo-fixture"
license = "Apache-2.0"
edition = "2021"

[dependencies]
tokio = { version = "1.34.0", features = ["rt", "macros"] }
tokio-postgres = "0.7.10"

[features]
_fixture = []

[dev-dependencies]
dockertest = "0.4.0"
cargo-fixture-lib = { version = "1", features = ["tokio"] }

[[test]]
name = "fixture"
test = false
harness = false
