[package]
name = "pk"
version = "0.1.0"
edition = "2021"

[dependencies]
cargo-fixture = { path = "../.." }

[features]
fixture = []

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.34", features = ["rt", "macros"] }

[[test]]
name = "fixture"
path = "tests/fixture.rs"
test = false
doctest = false
bench = false
doc = false
harness = false
