[package]
name = "pk"
version = "0.1.0"
edition = "2021"

[features]
_fixture = []

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.34", features = ["rt", "macros"] }

cargo-fixture-lib = { path = "../../crates/lib", features = ["tokio"] }

[[test]]
name = "fixture"
path = "tests/fixture.rs"
test = false
doctest = false
bench = false
doc = false
harness = false
